# model/menu.go
@@ -15,7 +15,8 @@ type Menu struct {
 	MenuStatus uint `gorm:"column:menu_status;comment:'啟用狀態: 1->啟用 2->禁用'" json:"menu_status"`
 	Sort uint `gorm:"column:sort;comment:'排序'" json:"sort"`
 	CreateTime util.HTime  `gorm:"column:create_time;comment:'創建時間'" json:"create_time"`
-	Children []Menu  `gorm:"_" json:"children"`
+	// Children []Menu  `gorm:"_" json:"children"`
+	 Children        []Menu    `gorm:"foreignKey:ParentId;references:ID" json:"children"`
 }
 
 func (Menu) TableName() string{
@@ -32,4 +33,21 @@ type CreateMenuDto struct{
 	Url string `json:"url"`
 	MenuStatus uint `json:"menu_status"`
 	Sort uint `json:"sort"`
+}
+
+// UpdateMenuDto 更新菜單參數
+type UpdateMenuDto struct{
+	ID uint `json:"id"`
+	ParentId uint `json:"parent_id"`
+	MenuName string `json:"menu_name"`
+	MenuIcon string `json:"menu_icon"`
+	PermissionValue string `json:"permssion_value"`
+	MenuType uint `json:"menu_type"`
+	Url string `json:"url"`
+	MenuStatus uint `json:"menu_status"`
+	Sort uint `json:"sort"`
+}
+
+type DeleteMenuDto struct{
+	ID uint `json:"id"`
 }
